--- a/06-passwordGenerator/package.json
+++ b/06-passwordGenerator/package.json
@@ -1,13 +1,16 @@
 {
   "name": "06-passwordgenerator",
   "private": true,
+  "homepage": "http://Prithvi-Pratap.github.io/React-JS/06-passwordGenerator",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build -- --base React-JS/06-passwordGenerator",
+    "deploy": "gh-pages -d dist -b React-JS/06-passwordGenerator"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -22,6 +25,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
